--- a/src/Modules/MasterModule/Views/Vehicles/GeneralAssurance.xaml
+++ b/src/Modules/MasterModule/Views/Vehicles/GeneralAssurance.xaml
@@ -1,21 +1,21 @@
-﻿<UserControl x:Class="MasterModule.Views.VehiControls.GeneralAssurance"
+﻿<UserControl x:Class="MasterModule.Views.VehicleAssurance.GeneralAssurance"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MasterModule.Views.VehiControls"
-             xmlns:KarveControls="clr-namespace:KarveControls;assembly=KarveControls" 
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:mvvm="http://prismlibrary.com/"
-             mc:Ignorable="d" 
-             xmlns:master="clr-namespace:MasterModule.Common"
              xmlns:kc="clr-namespace:KarveControls;assembly=KarveControls"
-             xmlns:kcdp="clr-namespace:KarveControls.ItemsControl;assembly=KarveControls" 
-             d:DesignHeight="300" d:DesignWidth="900">
+             xmlns:common="clr-namespace:MasterModule.Views.VehicleAssurance"
+             xmlns:mockViewModels="clr-namespace:MasterModule.Views.VehicleAssurance.MockViewModels"
+
+             mc:Ignorable="d" 
+             d:DesignHeight="400" d:DesignWidth="1000"
+             d:DataContext="{d:DesignInstance Type=mockViewModels:VehicleAssuranceMockViewModel, IsDesignTimeCreatable=True}">
     <Grid>
         <WrapPanel>
-        <KarveControls:DualFieldSearchBox 
-            LabelText="Comp.de seguros"
+        <kc:DualFieldSearchBox 
+            LabelText="{Binding StringConstants.AssuranceCompany}"
             LabelTextWidth="100"
             TextContentFirstWidth="50"
             TextContentSecondWidth="150"
@@ -28,91 +28,108 @@
             ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"                          
             AssistQuery="{Binding AssuranceQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
             AssistTableName="PROVEE1"
-            ButtonImage="{x:Static master:MasterModuleConstants.ImagePath}"
+            ButtonImage=""
             Height="25" />
-            <KarveControls:DualFieldSearchBox                                               
-            LabelText="Agente"
+            <kc:DualFieldSearchBox                                               
+            LabelText="{Binding StringConstants.Agent}"
             LabelTextWidth="100"
             AssistDataFieldFirst="NUM_PROVEE"
             AssistDataFieldSecond="NOMBRE"
             DataFieldFirst="agente"
             AssistProperties="Numero, Nombre, Direccion, Poblacion, Pais, Mail"
-            AssistQuery="{Binding AssuranceQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+            AssistQuery="{Binding AgentQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
             IsReadOnlySecond="True"
             TextContentFirstWidth="50"
             TextContentSecondWidth="150"
             Height="25"
             MagnifierCommand="{Binding AssistCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
             ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"                          
-            ButtonImage="{x:Static master:MasterModuleConstants.ImagePath}"/>
-            <KarveControls:DataArea                                               
+            ButtonImage=""/>
+            <kc:DataArea                                               
             DataAreaTitle="Tipo Seguro"
             DataAreaWidth="200"
-            KarveControls:ControlExt.DataSource="{Binding DataObject,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            KarveControls:ControlExt.DataSourcePath="tiposegu"
+            kc:ControlExt.DataSource="{Binding DataObject,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            kc:ControlExt.DataSourcePath="tiposegu"
             />
-            <KarveControls:DataField 
+            <kc:DataField 
                 LabelText="Carta Verde"
                 LabelTextWidth="100" 
                 TextContentWidth="150"
                 DataObject="{Binding DataObject,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 DataSourcePath="CARTAVERDE"
                 DataFieldHeight="25"/>
-            
-            <KarveControls:DataArea                                               
+            <kc:DataArea                                               
             DataAreaTitle="Observacion Seguro"
             DataAreaWidth="200"
-            KarveControls:ControlExt.DataSource="{Binding DataObject,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            KarveControls:ControlExt.DataSourcePath="OBS_SEGURO"
+            kc:ControlExt.DataSource="{Binding DataObject,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            kc:ControlExt.DataSourcePath="OBS_SEGURO"
             />
             <GroupBox Header="Poliza">
             <WrapPanel>
-                    <KarveControls:DataField x:Name="Poliza" 
-                                             LabelText="Póliza"
-                                             LabelTextWidth="80"
-                                             LabelVisible="True"
-                                             TextContentWidth="100"
-                                             DataFieldHeight="25"
+                    <kc:DataField x:Name="Poliza" 
+                                  DataObject="{Binding DataObject,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"        
+                                  DataSourcePath="TIPOREV"                  
+                                  LabelText="{Binding StringConstants.InsurancePolicy}"
+                                  LabelTextWidth="100"
+                                  LabelVisible="True"
+                                  TextContentWidth="100"
+                                  DataFieldHeight="25"
+                                              
                                               />
-                    <KarveControls:DataDatePicker DataDatePickerHeight="25" 
-                                                  x:Name="FechaAlta"   
-                                                  LabelText="Fecha Alta"/>
-                    <KarveControls:DataDatePicker 
+                    <kc:DataDatePicker DataDatePickerHeight="25" 
+                                                  x:Name="FechaAlta" 
+                                                  kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                  kc:ControlExt.DataSourcePath="ALTASEGU"
+                                                  LabelText="{Binding StringConstants.EntryDate}"/>
+                    <kc:DataDatePicker 
                         DataDatePickerHeight="25"
                         x:Name="FechaBaja"
-                       LabelText="Fecha Baja"/>
-                    <KarveControls:DataDatePicker
-                        DataDatePickerHeight="25"
-                        x:Name="Vencimiento" LabelText="Vencimiento"/>
+                        kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        kc:ControlExt.DataSourcePath="FBAJA_Segu"
 
-                    <KarveControls:DataField DataFieldHeight="25"
+                       LabelText="Fecha Baja"/>
+                    <kc:DataDatePicker
+                        DataDatePickerHeight="25"
+                        x:Name="Vencimiento" 
+                        kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        kc:ControlExt.DataSourcePath="VTO_Segu"
+                        LabelText="{Binding StringConstants.ExpirationDate}"/>
+
+                    <kc:DataField DataFieldHeight="25"
                                              LabelTextWidth="80"
                                              LabelText="Franquicia"
                                              TextContentWidth="150"
                                              LabelVisible="True"
                                      />
-                <KarveControls:DataField 
+                <kc:DataField 
+                      DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+              
+                    DataSourcePath="PRIMA"
+                  
                     DataFieldHeight="25" 
                     LabelTextWidth="80"
-                    LabelText="Prima"
+                    LabelText="{Binding StringConstants.Prima}"
+                  
                     ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"                 
                     TextContentWidth="150"
                     />
-                    <KarveControls:DataField 
+                    <kc:DataField 
                     DataFieldHeight="25" 
                     LabelTextWidth="80"
                     LabelText="Extorno"
-                    ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"                 
+                    kc:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    kc:ControlExt.DataSourcePath="FBAJA_Segu"
+                        ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"                 
                     TextContentWidth="150"
                     />
-                    <KarveControls:DataField 
+                    <kc:DataField 
                     DataFieldHeight="25" 
                     LabelTextWidth="80"
                     LabelText="Pendiente"
                     ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"                 
                     TextContentWidth="150"
                     />
-                    <KarveControls:DataField 
+                    <kc:DataField 
                     DataFieldHeight="25" 
                     LabelTextWidth="100"
                     LabelText="Valor para Seguro"
